

21-apr_____
اضافه اجمال الديون من التقريبر بعد فرز العملاء والموردين 
http://127.0.0.1:8000/reports/customer-supplier

الي
http://127.0.0.1:8000/account/balance-sheet
ال
مستحقات العميل:
مستحقات المورد:

المشكله في انو الرصيد الافتتاحي لايحسب فب الميزانيه

___الالتزامات
الالتزامات  تتحول الي الخصوم


تغير البوب للدفع
..
تغير الجاش بورد في نفي اللنقطه




____________Deplyu

accounttransactions_clones 	  	Browse Browse 	Structure Structure 	Search Search 	Insert Insert 	Empty Empty 	Drop Drop 	34 	InnoDB 	utf8mb4_unicode_ci 	16.0 KiB 	-
	purchaselines_clones 	  	Browse Browse 	Structure Structure 	Search Search 	Insert Insert 	Empty Empty 	Drop Drop 	15 	InnoDB 	utf8mb4_unicode_ci 	16.0 KiB 	-
	transactions_clones 	  	Browse Browse 	Structure Structure 	Search Search 	Insert Insert 	Empty Empty 	Drop Drop 	40 	InnoDB 	utf8mb4_unicode_ci 	16.0 KiB 	-
	
    create table transaction_sell_linesClone as select * from transaction_sell_lines where 1=10

    create table transaction_sell_lines_clones as select * from transaction_sell_lines where 1=10

    create table transaction_sell_lines_purchase_linesClone as select * from transaction_sell_lines_purchase_lines where 1=10

	transaction_sell_lines_clones 	  	Browse Browse 	Structure Structure 	Search Search 	Insert Insert 	Empty Empty 	Drop Drop 	6 	InnoDB 	utf8mb4_unicode_ci 	16.0 KiB 	-
	transaction_sell_lines_purchase_linesClone

    ALTER TABLE `bookings` ADD `booking_invoice` INT NULL AFTER `booking_note`; 


    //
create table transactions_clones_edit as select * from transactions_clones where 5=0;

create table transaction_sell_linesClone_edit as select * from transaction_sell_lines where 1=10

create table transaction_sell_lines_purchase_linesClone_edit as select * from transaction_sell_lines_purchase_lines where 1=10

create table purchase_lines_edit as select * from purchase_lines where 1=9;


ALTER TABLE `transaction_payments` ADD `cheque_date` VARCHAR(10) NULL AFTER `updated_at`;